--- a/test/src/main/webapp/index.html
+++ b/test/src/main/webapp/index.html
@@ -3,6 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script src="resource/jquery.js"></script>
+<script>
+	$.ajax({
+		asycn: true,
+		type: "delete",
+		url: "rest/1",
+		data: {},
+		success: function() {
+			
+		},
+		error: function() {
+			
+		},
+		dataType: "text"
+	});
+</script>
 </head>
 <body>
 
